--- a/main.css
+++ b/main.css
@@ -1,9 +1,78 @@
-
-table{
-    margin: auto;
-    padding: 10px;
+body
+{
+    margin-left: 15%;
+    margin-right: 15%;
+    background-color:#404040;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
 }
+
+header
+{
+    display: flex;
+    width: 100%;
+    background-color: #303030;
+    margin: 30px 0;
+    padding: 25px 0;
+    align-items: center;
+    justify-content: center;
+ }
+
+h1, p
+{
+    text-shadow: 5px 5px 7px #000000;
+    text-align: center;
+}
+
+#logo{
+    align-items:center;
+    justify-content:center;
+    width: 30%;
+}
+
+.form{
+    width: 100%;
+    margin: 30px 0;
+    padding: 15px 0;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    background-color: #303030;
+}
+
+form{
+    width: 100%;
+}
+
+input {
+    align-items:center;
+    justify-content:center;
+    width: 32%;
+    height: 20px;
+}
+
+button{
+    width: 30%;
+    text-align: center;
+    font-size: 1rem;
+    align-self: center;
+    background-color: orange;
+    border: none;
+    padding: 3.5px;
+    color: white;
+    font-weight: bold;
+    text-shadow: 5px 5px 7px #000000;
+    text-decoration: none;
+}
+
+table, form{
+    padding: 10px;
+    margin: 50px;
+}
+
 table, thead, th, td, tr {
     border: 1px solid black;
     padding: 5px;
 }
+
